<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Crear_Usuario"
    android:background="#0384BC">


    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="258dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/LoginEmail"
        android:inputType="textPersonName"
        android:textColorHint="#0F0F0F"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="365dp"
        android:ems="10"
        android:hint="@string/LoginPassword"
        android:inputType="textPassword"
        android:textColorHint="#0F0F0F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <Button
        android:id="@+id/button_continuar_crear_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="37dp"
        android:text="@string/UserBotonCrear"
        android:onClick="continuar_crear_usuario"
        android:background="#643CB0"
        app:layout_constraintBottom_toTopOf="@+id/button_cancelar_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <Button
        android:id="@+id/button_cancelar_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="186dp"
        android:text="@string/UserBotonCancelar"
        android:background="#F52D11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="cancelar_usuario_boton"
        app:layout_constraintTop_toBottomOf="@+id/button_continuar_crear_usuario" />
</androidx.constraintlayout.widget.ConstraintLayout>